@@ -1,5 +1,6 @@
 avernus 0.10:
   * annual return of portfolio positions
+  * annual return of portfolios
 
 
 avernus 0.9:
